[project]
name = "my-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "huggingface-hub>=0.36.0",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.57.6",
    "trl>=0.27.0",
    "vllm>=0.14.0",
]
